@@ -1,7 +1,7 @@
 /* Extended Module Player
  * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: rtm_load.c,v 1.2 2007-08-07 01:42:09 cmatsuoka Exp $
+ * $Id: rtm_load.c,v 1.3 2007-08-07 13:27:17 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -14,6 +14,9 @@
 
 #include "load.h"
 #include "rtm.h"
+
+#define MAX_SAMP 1024
+
 
 static int read_object_header(FILE *f, struct ObjectHeader *h)
 {
@@ -36,13 +39,13 @@ static int read_object_header(FILE *f, struct ObjectHeader *h)
 int rtm_load(FILE *f)
 {
 	int i, j, r;
-	//int instr_no = 0;
-	//uint8 *patbuf, *p, b;
 	struct xxm_event *event;
 	struct ObjectHeader oh;
 	struct RTMMHeader rh;
 	struct RTNDHeader rp;
-	int pattern_offset;
+	struct RTINHeader ri;
+	struct RTSMHeader rs;
+	int offset, smpnum;
 
 	LOAD_INIT();
 
@@ -88,12 +91,12 @@ int rtm_load(FILE *f)
 	if (V(0))
 		report("Stored patterns: %d ", xxh->pat);
 
-	pattern_offset = 42 + oh.headerSize + rh.extraDataSize;
+	offset = 42 + oh.headerSize + rh.extraDataSize;
 
 	for (i = 0; i < xxh->pat; i++) {
 		uint8 c;
 
-		fseek(f, pattern_offset, SEEK_SET);
+		fseek(f, offset, SEEK_SET);
 
 		read_object_header(f, &oh);
 	
@@ -102,7 +105,7 @@ int rtm_load(FILE *f)
 		rp.nrows = read16l(f);
 		rp.datasize = read32l(f);
 
-		pattern_offset += 42 + oh.headerSize + rp.datasize;
+		offset += 42 + oh.headerSize + rp.datasize;
 
 		PATTERN_ALLOC(i);
 		xxp[i]->rows = rp.nrows;
@@ -119,7 +122,7 @@ int rtm_load(FILE *f)
 					event = &EVENT(i, j, r);
 				}
 				if (c & 0x02)		/* read note */
-					event->note = read8(f);
+					event->note = read8(f) - 12;
 				if (c & 0x04)		/* read instrument */
 					event->ins = read8(f);
 				if (c & 0x08)		/* read effect */
@@ -141,206 +144,174 @@ int rtm_load(FILE *f)
 	if (V(0))
 		report("\n");
 
+	/*
+	 * load instruments
+	 */
+
 	if (V(0))
 		report("Instruments    : %d ", xxh->ins);
 	if (V(1))
 		report("\n");
 
-#if 0
+	fseek(f, offset, SEEK_SET);
+
 	/* ESTIMATED value! We don't know the actual value at this point */
 	xxh->smp = MAX_SAMP;
 
 	INSTRUMENT_INIT();
 
-	for (i = 0; i < xxh->ins; i++) {
-		xih.size = read32l(f);	/* Instrument size */
-		fread(&xih.name, 22, 1, f);	/* Instrument name */
-		xih.type = read8(f);	/* Instrument type (always 0) */
-		xih.samples = read16l(f);	/* Number of samples */
-		xih.sh_size = read32l(f);	/* Sample header size */
+	for (smpnum = i = 0; i < xxh->ins; i++) {
+		read_object_header(f, &oh);
 
-		copy_adjust(xxih[i].name, xih.name, 22);
+		copy_adjust(xxih[i].name, (uint8 *)&oh.name, 32);
 
-		xxih[i].nsm = xih.samples;
+		if (oh.headerSize == 0) {
+			if (V(1) && strlen((char *)xxih[i].name)) {
+				report("[%2X] %-30.30s %2d ", i, xxih[i].name,
+								xxih[i].nsm);
+			}
+			ri.nsample = 0;
+			if (V(1) && (strlen((char *)xxih[i].name) || xxih[i].nsm))
+				report("\n");
+			continue;
+		}
+
+		ri.nsample = read8(f);
+		ri.flags = read16l(f);	/* bit 0 : default panning enabled */
+		fread(&ri.table, 120, 1, f);
+
+		ri.volumeEnv.npoint = read8(f);
+		for (j = 0; j < 12; j++) {
+			ri.volumeEnv.point[j].x = read32l(f);
+			ri.volumeEnv.point[j].y = read32l(f);
+		}
+		ri.volumeEnv.sustain = read8(f);
+		ri.volumeEnv.loopstart = read8(f);
+		ri.volumeEnv.loopend = read8(f);
+		ri.volumeEnv.flags = read16l(f); /* bit 0:enable 1:sus 2:loop */
+		
+		ri.panningEnv.npoint = read8(f);
+		for (j = 0; j < 12; j++) {
+			ri.panningEnv.point[j].x = read32l(f);
+			ri.panningEnv.point[j].y = read32l(f);
+		}
+		ri.panningEnv.sustain = read8(f);
+		ri.panningEnv.loopstart = read8(f);
+		ri.panningEnv.loopend = read8(f);
+		ri.panningEnv.flags = read16l(f);
+
+		ri.vibflg = read8(f);
+		ri.vibsweep = read8(f);
+		ri.vibdepth = read8(f);
+		ri.vibrate = read8(f);
+		ri.volfade = read16l(f);
+
+		/* I don't see these inside the module */
+		//ri.midiPort = read8(f);
+		//ri.midiChannel = read8(f);
+		//ri.midiProgram = read8(f);
+		//ri.midiEnable = read8(f);
+
+		if (V(1) && (strlen((char *)xxih[i].name) || ri.nsample)) {
+			report("[%2X] %-30.30s %2d ", i, xxih[i].name,
+							xxih[i].nsm);
+		}
+		xxih[i].nsm = ri.nsample;
 		if (xxih[i].nsm > 16)
 			xxih[i].nsm = 16;
+		xxi[i] = calloc(sizeof (struct xxm_instrument), xxih[i].nsm);
 
-		if (V(1) && (strlen((char *)xxih[i].name) || xxih[i].nsm))
-			report("[%2X] %-22.22s %2d ", i, xxih[i].name,
-			       xxih[i].nsm);
+		/* Envelope */
+		xxih[i].rls = ri.volfade;
+		xxih[i].aei.npt = ri.volumeEnv.npoint;
+		xxih[i].aei.sus = ri.volumeEnv.sustain;
+		xxih[i].aei.lps = ri.volumeEnv.loopstart;
+		xxih[i].aei.lpe = ri.volumeEnv.loopend;
+		xxih[i].aei.flg = ri.volumeEnv.flags;
+		xxih[i].pei.npt = ri.panningEnv.npoint;
+		xxih[i].pei.sus = ri.panningEnv.sustain;
+		xxih[i].pei.lps = ri.panningEnv.loopstart;
+		xxih[i].pei.lpe = ri.panningEnv.loopend;
+		xxih[i].pei.flg = ri.panningEnv.flags;
+		if (xxih[i].aei.npt)
+			xxae[i] = calloc(4, xxih[i].aei.npt);
+		else
+			xxih[i].aei.flg &= ~XXM_ENV_ON;
+		if (xxih[i].pei.npt)
+			xxpe[i] = calloc(4, xxih[i].pei.npt);
+		else
+			xxih[i].pei.flg &= ~XXM_ENV_ON;
+		//memcpy(xxae[i], xi.v_env, xxih[i].aei.npt * 4);
+		//memcpy(xxpe[i], xi.p_env, xxih[i].pei.npt * 4);
 
-		if (xxih[i].nsm) {
-			xxi[i] =
-			    calloc(sizeof(struct xxm_instrument), xxih[i].nsm);
+		/* For each sample */
+		for (j = 0; j < xxih[i].nsm; j++, smpnum++) {
+			read_object_header(f, &oh);
 
-			fread(&xi.sample, 96, 1, f);	/* Sample map */
-			for (j = 0; j < 24; j++)
-				xi.v_env[j] = read16l(f);	/* Points for volume envelope */
-			for (j = 0; j < 24; j++)
-				xi.p_env[j] = read16l(f);	/* Points for pan envelope */
-			xi.v_pts = read8(f);	/* Number of volume points */
-			xi.p_pts = read8(f);	/* Number of pan points */
-			xi.v_sus = read8(f);	/* Volume sustain point */
-			xi.v_start = read8(f);	/* Volume loop start point */
-			xi.v_end = read8(f);	/* Volume loop end point */
-			xi.p_sus = read8(f);	/* Pan sustain point */
-			xi.p_start = read8(f);	/* Pan loop start point */
-			xi.p_end = read8(f);	/* Pan loop end point */
-			xi.v_type = read8(f);	/* Bit 0:On 1:Sustain 2:Loop */
-			xi.p_type = read8(f);	/* Bit 0:On 1:Sustain 2:Loop */
-			xi.y_wave = read8(f);	/* Vibrato waveform */
-			xi.y_sweep = read8(f);	/* Vibrato sweep */
-			xi.y_depth = read8(f);	/* Vibrato depth */
-			xi.y_rate = read8(f);	/* Vibrato rate */
-			xi.v_fade = read16l(f);	/* Volume fadeout */
+			rs.flags = read16l(f);
+			rs.basevolume = read8(f);
+			rs.defaultvolume = read8(f);
+			rs.length = read32l(f);
+			rs.loop = read32l(f);
+			rs.loopbegin = read32l(f);
+			rs.loopend = read32l(f);
+			rs.basefreq = read32l(f);
+			rs.basenote = read8(f);
+			rs.panning = read8(f);
 
-			/* Skip reserved space */
-			fseek(f,
-			      xih.size - 33 /*sizeof (xih) */  -
-			      208 /*sizeof (xi) */ , SEEK_CUR);
+			xxi[i][j].vol = rs.basevolume;
+			xxi[i][j].pan = rs.panning;
+			xxi[i][j].xpo = rs.basenote;
+			xxi[i][j].fin = 0;	/* FIXME */
+			xxi[i][j].vwf = ri.vibflg;
+			xxi[i][j].vde = ri.vibdepth;
+			xxi[i][j].vra = ri.vibrate;
+			xxi[i][j].vsw = ri.vibsweep;
+			xxi[i][j].sid = smpnum;
 
-			/* Envelope */
-			xxih[i].rls = xi.v_fade;
-			xxih[i].aei.npt = xi.v_pts;
-			xxih[i].aei.sus = xi.v_sus;
-			xxih[i].aei.lps = xi.v_start;
-			xxih[i].aei.lpe = xi.v_end;
-			xxih[i].aei.flg = xi.v_type;
-			xxih[i].pei.npt = xi.p_pts;
-			xxih[i].pei.sus = xi.p_sus;
-			xxih[i].pei.lps = xi.p_start;
-			xxih[i].pei.lpe = xi.p_end;
-			xxih[i].pei.flg = xi.p_type;
-			if (xxih[i].aei.npt)
-				xxae[i] = calloc(4, xxih[i].aei.npt);
-			else
-				xxih[i].aei.flg &= ~XXM_ENV_ON;
-			if (xxih[i].pei.npt)
-				xxpe[i] = calloc(4, xxih[i].pei.npt);
-			else
-				xxih[i].pei.flg &= ~XXM_ENV_ON;
-			memcpy(xxae[i], xi.v_env, xxih[i].aei.npt * 4);
-			memcpy(xxpe[i], xi.p_env, xxih[i].pei.npt * 4);
-
-			memcpy(&xxim[i], xi.sample, 96);
-			for (j = 0; j < 96; j++) {
-				if (xxim[i].ins[j] >= xxih[i].nsm)
-					xxim[i].ins[j] = (uint8) XMP_DEF_MAXPAT;
+			if (smpnum >= MAX_SAMP) {
+				fseek(f, rs.length, SEEK_CUR);
+				continue;
 			}
 
-			for (j = 0; j < xxih[i].nsm; j++, instr_no++) {
+			copy_adjust(xxs[smpnum].name, (uint8 *)oh.name, 32);
 
-				xsh[j].length = read32l(f);	/* Sample length */
-				xsh[j].loop_start = read32l(f);	/* Sample loop start */
-				xsh[j].loop_length = read32l(f);	/* Sample loop length */
-				xsh[j].volume = read8(f);	/* Volume */
-				xsh[j].finetune = read8s(f);	/* Finetune (-128..+127) */
-				xsh[j].type = read8(f);	/* Flags */
-				xsh[j].pan = read8(f);	/* Panning (0-255) */
-				xsh[j].relnote = read8s(f);	/* Relative note number */
-				xsh[j].reserved = read8(f);
-				fread(&xsh[j].name, 22, 1, f);	/* Sample_name */
+			xxs[smpnum].len = rs.length;
+			xxs[smpnum].lps = rs.loopbegin;
+			xxs[smpnum].lpe = rs.loopend;
+			xxs[smpnum].flg = rs.flags & 0x02 ?  WAVE_16_BITS : 0;
+			xxs[smpnum].flg |= rs.loop & 0x03 ?  WAVE_LOOPING : 0;
+			xxs[smpnum].flg |= rs.loop == 2 ? WAVE_BIDIR_LOOP : 0;
 
-				xxi[i][j].vol = xsh[j].volume;
-				xxi[i][j].pan = xsh[j].pan;
-				xxi[i][j].xpo = xsh[j].relnote;
-				xxi[i][j].fin = xsh[j].finetune;
-				xxi[i][j].vwf = xi.y_wave;
-				xxi[i][j].vde = xi.y_depth;
-				xxi[i][j].vra = xi.y_rate;
-				xxi[i][j].vsw = xi.y_sweep;
-				xxi[i][j].sid = instr_no;
-				if (instr_no >= MAX_SAMP)
-					continue;
+			if ((V(1)) && rs.length) {
+				report ("%s[%1x] %05x%c%05x %05x %c "
+						"V%02x P%02x R%+03d",
+					j ? "\n\t\t\t\t\t" : "\t", j,
+					xxs[xxi[i][j].sid].len,
+					xxs[xxi[i][j].sid].flg & WAVE_16_BITS ? '+' : ' ',
+					xxs[xxi[i][j].sid].lps,
+					xxs[xxi[i][j].sid].lpe,
+					xxs[xxi[i][j].sid].flg & WAVE_BIDIR_LOOP ? 'B' :
+					xxs[xxi[i][j].sid].flg & WAVE_LOOPING ? 'L' : ' ',
+					rs.basevolume, rs.panning & 0x0ff,
+					rs.basenote);
 
-				copy_adjust(xxs[instr_no].name, xsh[j].name,
-					    22);
-
-				xxs[instr_no].len = xsh[j].length;
-				xxs[instr_no].lps = xsh[j].loop_start;
-				xxs[instr_no].lpe =
-				    xsh[j].loop_start + xsh[j].loop_length;
-				xxs[instr_no].flg =
-				    xsh[j].
-				    type & XM_SAMPLE_16BIT ? WAVE_16_BITS : 0;
-				xxs[instr_no].flg |=
-				    xsh[j].
-				    type & XM_LOOP_FORWARD ? WAVE_LOOPING : 0;
-				xxs[instr_no].flg |=
-				    xsh[j].
-				    type & XM_LOOP_PINGPONG ? WAVE_LOOPING |
-				    WAVE_BIDIR_LOOP : 0;
 			}
-			for (j = 0; j < xxih[i].nsm; j++) {
-				if (instr_no >= MAX_SAMP)
-					continue;
-				if ((V(1)) && xsh[j].length)
-					report("%s[%1x] %05x%c%05x %05x %c "
-					       "V%02x F%+04d P%02x R%+03d",
-					       j ? "\n\t\t\t\t" : "\t", j,
-					       xxs[xxi[i][j].sid].len,
-					       xxs[xxi[i][j].sid].
-					       flg & WAVE_16_BITS ? '+' : ' ',
-					       xxs[xxi[i][j].sid].lps,
-					       xxs[xxi[i][j].sid].lpe,
-					       xxs[xxi[i][j].sid].
-					       flg & WAVE_BIDIR_LOOP ? 'B' :
-					       xxs[xxi[i][j].sid].
-					       flg & WAVE_LOOPING ? 'L' : ' ',
-					       xsh[j].volume, xsh[j].finetune,
-					       xsh[j].pan, xsh[j].relnote);
 
-				if (xfh.version > 0x0103)
-					xmp_drv_loadpatch(f, xxi[i][j].sid,
-							  xmp_ctl->c4rate,
-							  XMP_SMP_DIFF,
-							  &xxs[xxi[i][j].sid],
-							  NULL);
-			}
-			if (xmp_ctl->verbose == 1)
-				report(".");
-		} else {
-			fseek(f, xih.size - 33 /*sizeof (xih) */ , SEEK_CUR);
+			xmp_drv_loadpatch(f, xxi[i][j].sid, xmp_ctl->c4rate,
+				XMP_SMP_DIFF, &xxs[xxi[i][j].sid], NULL);
 		}
+		if (xmp_ctl->verbose == 1)
+			report (".");
 
-		if ((V(1)) && (strlen((char *)xxih[i].name) || xih.samples))
-			report("\n");
+		if ((V(1)) && (strlen((char *) xxih[i].name) || ri.nsample))
+			report ("\n");
 	}
-	xxh->smp = instr_no;
-	xxs = realloc(xxs, sizeof(struct xxm_sample) * xxh->smp);
 
-	if (xfh.version <= 0x0103) {
-		if (xmp_ctl->verbose > 0 && xmp_ctl->verbose < 2)
-			report("\n");
-		goto load_patterns;
-	}
-      load_samples:
-	if ((V(0) && xfh.version <= 0x0103) || V(1))
-		report("Stored samples : %d ", xxh->smp);
-
-	/* XM 1.02 stores all samples after the patterns */
-
-	if (xfh.version <= 0x0103) {
-		for (i = 0; i < xxh->ins; i++) {
-			for (j = 0; j < xxih[i].nsm; j++) {
-				xmp_drv_loadpatch(f, xxi[i][j].sid,
-						  xmp_ctl->c4rate, XMP_SMP_DIFF,
-						  &xxs[xxi[i][j].sid], NULL);
-				if (V(0))
-					report(".");
-			}
-		}
-	}
-	if (V(0))
-		report("\n");
-
-	/* If dynamic pan is disabled, XM modules will use the standard
-	 * MOD channel panning (LRRL). Moved to module_play () --Hipolito.
-	 */
-
+	xxh->smp = smpnum;
+	xxs = realloc (xxs, sizeof (struct xxm_sample) * xxh->smp);
 
 	xmp_ctl->fetch |= XMP_MODE_FT2;
-#endif
 
 	return 0;
 }
